// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteConfirmation component should match snapshot 1`] = `
<body>
  <div>
    <div
      class="fixed inset-0 flex items-center z-40 max-h-screen overflow-y-scroll"
    >
      <div
        class="fixed inset-0 bg-gray-900 opacity-75"
      />
       
      <div
        class="relative mx-4 md:mx-auto w-full md:w-2/3 lg:w-3/5 xl:w-1/3 z-50 max-h-full"
      >
        <div
          class="py-8"
        >
          <div
            class="shadow-xl bg-white rounded-lg p-4 xl:p-6 max-h-full"
          >
            <div
              class="flex justify-end mb-2"
            >
              <button
                aria-label="close"
                class="text-gray-800"
              >
                <svg
                  class="fill-current inline"
                  height="24"
                  viewBox="0 0 1792 1792"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294
        294q-28 28-68
        28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28
        68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28
        68l-294 294 294 294q28 28 28 68z"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="mb-4"
            >
              <p
                class="font-bold text-xl text-red-600"
              >
                
                 
                <br />
                 
                This cannot be undone.
              </p>
            </div>
             
            <div
              class="text-right"
            >
              <button
                class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mr-4"
                data-testid="confirm-cancel"
                type="button"
              >
                Cancel
              </button>
               
              <button
                class="btn btn-red  "
                data-testid="confirm-confirm"
                type="button"
              >
                Confirm Delete
              </button>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DeleteConfirmation component should match snapshot when permanent=false 1`] = `
<body>
  <div>
    <div
      class="fixed inset-0 flex items-center z-40 max-h-screen overflow-y-scroll"
    >
      <div
        class="fixed inset-0 bg-gray-900 opacity-75"
      />
       
      <div
        class="relative mx-4 md:mx-auto w-full md:w-2/3 lg:w-3/5 xl:w-1/3 z-50 max-h-full"
      >
        <div
          class="py-8"
        >
          <div
            class="shadow-xl bg-white rounded-lg p-4 xl:p-6 max-h-full"
          >
            <div
              class="flex justify-end mb-2"
            >
              <button
                aria-label="close"
                class="text-gray-800"
              >
                <svg
                  class="fill-current inline"
                  height="24"
                  viewBox="0 0 1792 1792"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294
        294q-28 28-68
        28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28
        68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28
        68l-294 294 294 294q28 28 28 68z"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="mb-4"
            >
              <p
                class="font-bold text-xl text-red-600"
              >
                
                 
              </p>
            </div>
             
            <div
              class="text-right"
            >
              <button
                class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mr-4"
                data-testid="confirm-cancel"
                type="button"
              >
                Cancel
              </button>
               
              <button
                class="btn btn-red  "
                data-testid="confirm-confirm"
                type="button"
              >
                Confirm Delete
              </button>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
